Cleanup (warnings; formatting)
GitOrigin-RevId: 342a28d91bba2e0b19241b3c6ef235d02ca199f8